# functional_cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  test.cpp
